--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>5seconds!</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+    <div class="container">
+        <div class="target">5.000</div>
+        <div class="result">0.000</div>
+        <div class="buttons">
+            <div class="start">start</div>
+            <div class="stop">stop</div>
+    </div>
 </body>
 </html>
