--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="target">5.000</div>
-        <div class="result">0.000</div>
+        <div id="target">5.000</div>
+        <div id="result">0.000</div>
         <div class="buttons">
-            <div class="start">start</div>
-            <div class="stop">stop</div>
+            <div id="start">start</div>
+            <div id="stop">stop</div>
     </div>
 </body>
 </html>
