--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <div class="container">
         <div id="target">5.000</div>
-        <div id="result">0.000</div>
+        <div id="result" className="stanby">0.000</div>
         <div class="buttons">
             <div id="start">start</div>
             <div id="stop">stop</div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
